--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,3 +1,5 @@
+## MOVE THIS FILE to `.github/workflows/docker-build.yaml` TO EXECUTE IT
+
 # This is a basic workflow to help you get started with Actions
 
 name: Docker Build and Push
@@ -42,4 +44,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: {{ YOUR_DOCKERHUB_REPOSITORY }}/python-helloworld:latest
+          tags: 9158711/python-helloworld:latest
