--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./solutions/python-helloworld/Dockerfile
+          file: ./Dockerfile
           platforms: linux/amd64
           push: true
           tags: 9158711/python-helloworld:latest
